--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .App {
+  background-color: var(--main-bg-color);
   color: var(--primary-color);
   font-family: 'Bitter', sans-serif;
   min-height: 100vh;
