--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
 .App {
   background-color: var(--main-bg-color);
   color: var(--primary-color);
-  font-family: 'Bitter', sans-serif;
+  font-family: 'Moulpali', sans-serif;
+  font-size: 25px;
   min-height: 100vh;
 }
 
