Update logo and new colour variables

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --main-bg-color: black;
-  --primary-color: #FF00DE;
-  --secondary-color: #1ADF00;
+  --primary-color: #E9ECEF;
+  --secondary-color: #FF00DE;
 }
 
 h1, h2, h3 {
