--- a/src/styles/PostList.module.css
+++ b/src/styles/PostList.module.css
@@ -4,3 +4,15 @@
   padding-left: 40px;
   margin-bottom: 16px;
 }
+
+.SearchIcon {
+  position: absolute;
+  font-size: 1.2rem;
+  padding: 9px;
+  padding-left: 15px;
+}
+
+.SearchIcon:hover {
+  cursor: default;
+  color: #cfced3;
+}
