Update new font family:

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,5 +11,9 @@ a {
 }
 
 .Text {
-  color: var(--primary-color)
+  color: var(--primary-color);
+}
+
+.Heading {
+  font-family: var(--headings-font-family);
 }
