--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
   --secondary-color: #FF00DE;
 }
 
-h1, h2, h3 {
-  font-family: 'Moon Dance', sans-serif;
+:root {
+  --headings-font-family: "Rubik Lines", sans-serif;
+  --content-font-family: "Maulpali", sans-serif;
 }
+
+h1, h2, h3 {
+  font-family: 'Rubik Lines', sans-serif;
+}
+
