--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,7 +1,12 @@
 .NavLink {
   color: var(--primary-color);
   font-family: var(--headings-font-family);
-  font-size: smaller;
+  font-size: 1rem;
+}
+
+.NavLink:hover {
+  color: var(--secondary-color);
+  text-decoration: none;
 }
 
 .Active {
