--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,7 +1,7 @@
 .NavLink {
   color: var(--primary-color);
   font-family: var(--headings-font-family);
-  font-size: 1rem;
+  font-size: 18px;
 }
 
 .NavLink:hover {
