Add styles to post card

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -14,8 +14,11 @@
 .Image {
   width: 600px;
   height: 600px;
+  padding: 2px;
+  object-fit: cover;
 }
 
 .Card {
   max-width: 600px;
+  border: none;
 }
