--- a/src/styles/PostList.module.css
+++ b/src/styles/PostList.module.css
@@ -3,4 +3,9 @@
   color: #242a3d;
   padding-left: 40px;
   margin-bottom: 16px;
+  max-width: 600px;
+}
+
+.Scroll {
+  overflow: hidden !important;
 }
