--- a/src/styles/PostList.module.css
+++ b/src/styles/PostList.module.css
@@ -3,7 +3,10 @@
   color: #242a3d;
   padding-left: 40px;
   margin-bottom: 16px;
-  max-width: 600px;
+}
+
+.SearchContainer {
+  width: 80%;
 }
 
 .Scroll {
