--- a/src/styles/AddCommentForm.module.css
+++ b/src/styles/AddCommentForm.module.css
@@ -1,3 +1,9 @@
 .Button {
   background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+
+.Button:hover {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
