--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -5,6 +5,14 @@
   margin: 4px;
 }
 
+.CardBg {
+  border: 1px solid var(--secondary-color);
+  margin: 50px 50px 0 50px;
+  padding: 15px 5px 15px 5px;
+  border-radius: 12px;
+
+}
+
 @media screen and (max-width: 991px) {
   .ProfileImage {
     width: 250px;
