--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -7,9 +7,10 @@
 
 .CardBg {
   border: 1px solid var(--secondary-color);
-  margin: 50px 50px 0 50px;
+  margin-top: 50px;
   padding: 15px 5px 15px 5px;
   border-radius: 12px;
+  max-width: 600px;
 
 }
 
