Add content to homepage

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,3 +21,11 @@ a {
 .Highlight {
   color: var(--secondary-color);
 }
+
+.Link {
+  text-decoration: none;
+}
+
+.Link:hover {
+  color: var(--primary-color);
+}
