--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -13,3 +13,14 @@
   color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
 }
+
+.ScrollButton {
+  position: fixed;  
+  width: 100%; 
+  left: 45%; 
+  bottom: 20px; 
+  /* height: 20px;   */
+  z-index: 1; 
+  cursor: pointer;
+  color: var(--secondary-color);
+}
