--- a/src/styles/DividerLine.module.css
+++ b/src/styles/DividerLine.module.css
@@ -1,3 +1,6 @@
+/* Code adapted from Isabel C CodePen 'Pure CSS Horizontal Divider With Star Icon': 
+https://codepen.io/isabelc/pen/MmrJgx */
+
 .Divider {
   margin: 40px auto;
   width: 500px; 
