Amend styles on post page

--- a/src/styles/DividerLine.module.css
+++ b/src/styles/DividerLine.module.css
@@ -33,7 +33,7 @@ https://codepen.io/isabelc/pen/MmrJgx */
   margin-left: -25px;
   border-radius: 100%;
   box-shadow: 0 2px 4px var(--secondary-color);
-  background: #252525;
+  background: var(--main-bg-color);
 }
 
 .DividerIcon {
@@ -46,6 +46,6 @@ https://codepen.io/isabelc/pen/MmrJgx */
   border: 1px dashed var(--secondary-color);
   text-align: center;
   line-height: 40px;
-  color: var(--main-bg-color);
+  color: var(--secondary-color);
   font-size: 10px;
 }
