--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -20,3 +20,10 @@
   max-width: 600px;
   border: none;
 }
+
+.Tag {
+  border: 1px solid #FFA200;
+  border-radius: 12px;
+  margin: 0 3px;
+  padding: 5px 10px;
+}
