Amend backtotopbutton so it's hidden when you reach the footer

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,9 @@
   color: var(--primary-color);
   font-family: 'Moulpali', sans-serif;
   min-height: 100vh;
+  min-height: calc(100vh - 100px);
 }
+
 
 a {
   color: var(--primary-color);
