--- a/src/styles/Buttons.module.css
+++ b/src/styles/Buttons.module.css
@@ -14,14 +14,20 @@
   border: 1px solid var(--secondary-color);
 }
 
-.ScrollButton {
+.BackToTopButton {
   position: fixed;  
-  width: 100%; 
-  left: 45%; 
-  bottom: 20px; 
-  z-index: 1; 
+  width: 50px; 
+  bottom: 40px; 
+  right: 40px; 
+  z-index: 99; 
   cursor: pointer;
   color: var(--secondary-color);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.BackToTopButton.Show {
+  opacity: 1;
 }
 
 .ChangeImgBtn {
