--- a/src/styles/AddCommentForm.module.css
+++ b/src/styles/AddCommentForm.module.css
@@ -1,9 +1,25 @@
-.Button {
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
+.EmojiBtn {
+  color: var(--secondary-color);
+  position: absolute;
+  top: 5px; /* Adjust this value to align with the top of the textarea */
+  right: 5px; /* Adjust this value to align with the right of the textarea */
+  cursor: pointer;
 }
 
-.Button:hover {
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
+.TextareaIcon {
+  position: relative;
+}
+
+.TextareaIcon::after {
+  content: '';
+  position: absolute;
+  top: 5px; /* Adjust this value according to your layout */
+  right: 5px; /* Adjust this value according to your layout */
+  pointer-events: none; /* Ensure clicks go through to the textarea */
+}
+
+.Picker {
+  position: absolute;
+  top: -700%;
+  right: -1%;
 }
