Update headings font as appearing differently on deployed mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --headings-font-family: "Rubik 80s Fade", sans-serif;
+  --headings-font-family: "Rubik Distressed", sans-serif;
   --content-font-family: "Maulpali", sans-serif;
 }
 
