Link up /following path to profile page

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,3 +31,11 @@ a {
 .OppositeLink:hover {
   color: var(--primary-color);
 }
+
+.BlackLink {
+  color: #252525;
+}
+
+.BlackLink:hover {
+  color: var(--secondary-color);
+}
