--- a/src/styles/AddPostForm.module.css
+++ b/src/styles/AddPostForm.module.css
@@ -6,6 +6,7 @@
   background-color: #343A40;
   padding: 10px;
   border-radius: 5px;
+  height: 100%;
 }
 
 .Text {
@@ -24,4 +25,8 @@
 
 .FormFile {
   display: none;
+}
+
+.Tag {
+  height: fit-content;
 }
