Add name attribute to search bar input

--- a/src/styles/AddEditCommentForm.module.css
+++ b/src/styles/AddEditCommentForm.module.css
@@ -1,7 +1,7 @@
 .EmojiBtn {
   color: var(--secondary-color);
   position: absolute;
-  top: 5px; 
+  bottom: -25px; 
   right: 5px; 
   cursor: pointer;
 }
