Amend background colour of add post form

--- a/src/styles/AddPostForm.module.css
+++ b/src/styles/AddPostForm.module.css
@@ -3,7 +3,7 @@
 }
 
 .TextContainer {
-  background-color: #343A40;
+  background-color: #545D65;
   padding: 10px;
   border-radius: 5px;
   height: 100%;
